refactor: updated class name

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -30,7 +30,7 @@
             <bf-carousel>
               <analytics-pie-chart class="surface" carouselItem [data]="orgActivityOfPopularTitle$ | async">
               </analytics-pie-chart>
-              <analytics-map class="surface caroussel-map" carouselItem [data]="territoryActivityOfPopularTitle$ | async">
+              <analytics-map class="surface carousel-map" carouselItem [data]="territoryActivityOfPopularTitle$ | async">
                 <article>
                   <h5>
                     <mat-icon svgIcon="landscape"></mat-icon>
