--- a/libs/organization/src/lib/organization/forms/organization-form/organization-form.component.html
+++ b/libs/organization/src/lib/organization/forms/organization-form/organization-form.component.html
@@ -11,7 +11,7 @@
             <!-- Here is missing an input for the public name of an organization,
             we always have to decide how we will handle that -->
             <mat-label>Company Name</mat-label>
-            <input test-id="name" matInput placeholder="Company Name" formControlName="full" type="text" (blur)="uniqueOrgName()" required/>
+            <input test-id="name" matInput placeholder="Company Name" formControlName="name" type="text" (blur)="uniqueOrgName()" required/>
             <mat-error *ngIf="form.get('name').hasError('required')">Company name is required</mat-error>
             <mat-error *ngIf="form.get('name').hasError('notUnique')">This company already exists.</mat-error>
           </mat-form-field>
