--- a/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
+++ b/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
@@ -46,7 +46,7 @@
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
-      <mat-checkbox [disabled]="processing > 0" (click)="$event.stopPropagation()"
+      <mat-checkbox [disabled]="row | isDisabled: processing" (click)="$event.stopPropagation()"
         (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)"
         [aria-label]="checkboxLabel(row)" color="primary">
       </mat-checkbox>
