refactor: updated styles

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -64,7 +64,7 @@
         </section>
 
         <section class="surface">
-          <analytics-map  [data]="activeCountries$ | async" [topCount]="5" horizontal showLegend selectable>
+          <analytics-map class="insights-map"  [data]="activeCountries$ | async" [topCount]="5" horizontal showLegend selectable>
             <h3>
               <mat-icon svgIcon="buyer_insights"></mat-icon>
               <span>Buyers' Insights</span>
