--- a/libs/import/src/lib/table-extracted-elements/organizations/organizations.component.html
+++ b/libs/import/src/lib/table-extracted-elements/organizations/organizations.component.html
@@ -29,7 +29,7 @@
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
-      <mat-checkbox [disabled]="row | isDisabled: processing" (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+      <mat-checkbox [disabled]="row | isDisabled: processing : row.imported" (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
         [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
       </mat-checkbox>
     </td>
@@ -79,7 +79,7 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-flat-button color="primary" [disabled]="element | isDisabled: processing" (click)="create(element)">
+      <button mat-flat-button color="primary" [disabled]="element | isDisabled: processing : element.imported" (click)="create(element)">
         <ng-container *ngIf="element.importing">
           <span>Creating</span>
           <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
