--- a/libs/ui/src/lib/form/password-input/password-input.component.html
+++ b/libs/ui/src/lib/form/password-input/password-input.component.html
@@ -1,11 +1,14 @@
 <mat-form-field appearance="outline">
   <mat-label>Password</mat-label>
-  <input matInput 
-  [placeholder]="placeholder" 
-  [formControl]="control" 
-  [errorStateMatcher]="errorStateMatcher"
-  required [type]="hidePassword ? 'password' : 'text'" />
-  <button matSuffix type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+  <input 
+    matInput
+    [placeholder]="placeholder"
+    [formControl]="control"
+    [errorStateMatcher]="errorStateMatcher"
+    required
+    [type]="hidePassword ? 'password' : 'text'"
+  />
+  <button matSuffix mat-icon-button type="button" (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
     <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
   </button>
   <mat-hint>
