--- a/libs/ui/src/lib/form/password-input/password-input.component.html
+++ b/libs/ui/src/lib/form/password-input/password-input.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="outline">
-  <mat-label>Password</mat-label>
+  <mat-label>{{ label }}</mat-label>
   <input 
     matInput
     [placeholder]="placeholder"
