--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -4,35 +4,22 @@
   </mat-card-header>
   <mat-card-content>
     <form fxLayout="column" fxLayoutAlign="start center" [formGroup]="form">
-      <mat-form-field appearance="outline">
-        <mat-label>Current Password</mat-label>
-        <input
-          matInput
-          test-id="current-password"
-          type="password"
-          placeholder="Current Password"
-          formControlName="current"
-          [type]="hidePassword ? 'password' : 'text'"
-        />
-      <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-        <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
-      </button>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>New Password</mat-label>
-        <input
-          test-id="password"
-          matInput
-          type="password"
-          placeholder="New Password"
-          formControlName="next"
-          [errorStateMatcher]="currentPasswordMatch"
-          [type]="hidePassword ? 'password' : 'text'"
-          required
-        />
-        <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-          <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
-        </button>
+      <!-- Current Password field -->
+      <password-input
+        [control]="form.get('current')"
+        placeholder="Current Password"
+        label="Current Password"
+        test-id="current-password"
+      >
+      </password-input>
+      <!-- New Password field -->
+      <password-input 
+        [control]="form.get('next')"
+        [errorStateMatcher]="currentPasswordMatch"
+        placeholder="New Password"
+        label="New Password"
+        test-id="password"
+      >
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
           New password is <b>required</b>.
@@ -46,22 +33,15 @@
         <mat-error *ngIf="form.hasError('currentPasswordMatch')">
           Your new password has to be <b>different</b> than current password.
         </mat-error>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>New Password Confirmation</mat-label>
-        <input
-          test-id="password-confirm"
-          matInput
-          type="password"
-          placeholder="New Password Confirmation"
-          formControlName="confirm"
-          [errorStateMatcher]="passwordsMatcher"
-          [type]="hidePassword ? 'password' : 'text'"
-          required
-        />
-        <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-          <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
-        </button>
+      </password-input>
+      <!-- Confirmation New Password field -->
+      <password-input
+        [control]="form.get('confirm')"
+        [errorStateMatcher]="passwordsMatcher"
+        placeholder="New Password Confirmation"
+        label="New Password Confirmation"
+        test-id="password-confirm"
+      >
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
           New password confirmation is <b>required</b>.
@@ -69,7 +49,7 @@
         <mat-error *ngIf="form.hasError('passwordsNotMatching')">
           The confirmation password does not <b>match your password</b>.
         </mat-error>
-      </mat-form-field>
+      </password-input>
     </form>
   </mat-card-content>
 </mat-card>
