--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -95,21 +95,13 @@
           </div>
         </ng-container>
 
-        <mat-form-field appearance="outline" *ngIf="form.get('password').enabled">
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            type="password"
-            placeholder="New Password"
-            formControlName="password"
-            [errorStateMatcher]="currentPasswordMatch"
-            required
-            test-id="password"
-            [type]="hidePassword ? 'password' : 'text'"
-          />
-          <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-            <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
-          </button>
+        <!-- NEW PASSWORD -->
+        <password-input
+          [control]="form.get('password')"
+          placeholder="New Password"
+          label="Password"
+          test-id="password"
+        >
           <mat-hint>Between 6 and 24 characters.</mat-hint>
           <mat-error *ngIf="form.get('password').hasError('required')">
             New password is <strong>required</strong>.
@@ -120,25 +112,16 @@
           <mat-error *ngIf="form.get('password').hasError('maxlength')">
             New password with more than <strong>24</strong> characters.
           </mat-error>
-          <mat-error *ngIf="form.hasError('currentPasswordMatch')">
-            Your new password has to be <strong>different</strong> than current password.
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline" *ngIf="form.get('confirm').enabled">
-          <mat-label>Password Confirmation</mat-label>
-          <input
-            matInput
-            type="password"
-            placeholder="New Password Confirmation"
-            formControlName="confirm"
-            [errorStateMatcher]="passwordsMatcher"
-            required
-            test-id="password-confirm"
-            [type]="hidePassword ? 'password' : 'text'"
-          />
-          <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-            <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
-          </button>
+        </password-input>
+
+        <!-- PASSWORD CONFIRMATION -->
+        <password-input
+          [control]="form.get('confirm')"
+          [errorStateMatcher]="passwordsMatcher"
+          placeholder="New Password Confirmation"
+          label="Password Confirmation"
+          test-id="password-confirm"
+        >
           <mat-hint>Please rewrite your password for confirmation.</mat-hint>
           <mat-error *ngIf="form.get('confirm').hasError('required')">
             New password confirmation is <strong>required</strong>.
@@ -146,7 +129,7 @@
           <mat-error *ngIf="form.hasError('passwordsNotMatching')">
             The confirmation password does not <strong>match your password</strong>.
           </mat-error>
-        </mat-form-field>
+        </password-input>
 
         <!-- TERMS OF USE & PRIVACY POLICY -->
         <div class="privacy" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="16px">
