Using password-input on The event login page

--- a/apps/festival/festival/src/app/event/login/login.component.scss
+++ b/apps/festival/festival/src/app/event/login/login.component.scss
@@ -37,7 +37,7 @@
         margin-bottom: 24px;
       }
 
-      mat-form-field:last-of-type {
+      password-input {
         margin-bottom: 58px;
       }
     }
