--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -1,18 +1,5 @@
 <form [formGroup]="form">
-  <mat-form-field appearance="outline">
-    <mat-label>New Password</mat-label>
-    <input
-      test-id="password"
-      matInput
-      type="password"
-      placeholder="New Password"
-      formControlName="password"
-      [type]="hidePassword ? 'password' : 'text'"
-      required
-    />
-    <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
-    </button>
+  <password-input [control]="form.get('password')" placeholder="New Password" label="New Password" test-id="password" >   
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
       New password is <strong>required</strong>.
@@ -23,22 +10,15 @@
     <mat-error *ngIf="form.get('password').hasError('maxlength')">
       New password with more than <strong>24</strong> characters.
     </mat-error>
-  </mat-form-field>
-  <mat-form-field appearance="outline">
-    <mat-label>New Password Confirmation</mat-label>
-    <input
-      test-id="password-confirm"
-      matInput
-      type="password"
-      placeholder="New Password Confirmation"
-      formControlName="confirm"
-      [errorStateMatcher]="passwordsMatcher"
-      [type]="hidePassword ? 'password' : 'text'"
-      required
-    />
-    <button type="button" matSuffix mat-icon-button (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
-      <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
-    </button>
+  </password-input>
+
+  <password-input 
+    [control]="form.get('confirm')"
+    [errorStateMatcher]="passwordsMatcher" 
+    placeholder="New Password Confirmation" 
+    label="New Password Confirmation" 
+    test-id="password-confirm"
+  >   
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
       New password confirmation is <strong>required</strong>.
@@ -46,5 +26,5 @@
     <mat-error *ngIf="form.hasError('passwordsNotMatching')">
       New password and New password confirmation do not <strong>match</strong>.
     </mat-error>
-  </mat-form-field>
+  </password-input>
 </form>
