Used 'EventEmitter' for show/hide several passwords on the same page and time (exemple: New Password and Confirmation New Password)

--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -10,6 +10,8 @@
         placeholder="Current Password"
         label="Current Password"
         test-id="current-password"
+        (switchHidePassword)="switchHidePassword()"
+        [hidePassword]="hidePassword"
       >
       </password-input>
       <!-- New Password field -->
@@ -19,6 +21,8 @@
         placeholder="New Password"
         label="New Password"
         test-id="password"
+        (switchHidePassword)="switchHidePassword()"
+        [hidePassword]="hidePassword"
       >
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
@@ -41,6 +45,8 @@
         placeholder="New Password Confirmation"
         label="New Password Confirmation"
         test-id="password-confirm"
+        (switchHidePassword)="switchHidePassword()"
+        [hidePassword]="hidePassword"
       >
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
