--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -101,6 +101,8 @@
           placeholder="New Password"
           label="Password"
           test-id="password"
+          [hidePassword]="hidePassword"
+          (switchHidePassword)="switchHidePassword()"
         >
           <mat-hint>Between 6 and 24 characters.</mat-hint>
           <mat-error *ngIf="form.get('password').hasError('required')">
@@ -121,6 +123,8 @@
           placeholder="New Password Confirmation"
           label="Password Confirmation"
           test-id="password-confirm"
+          [hidePassword]="hidePassword"
+          (switchHidePassword)="switchHidePassword()"
         >
           <mat-hint>Please rewrite your password for confirmation.</mat-hint>
           <mat-error *ngIf="form.get('confirm').hasError('required')">
