Removed the last feature

--- a/libs/ui/src/lib/form/password-input/password-input.component.html
+++ b/libs/ui/src/lib/form/password-input/password-input.component.html
@@ -8,7 +8,7 @@
     required
     [type]="hidePassword ? 'password' : 'text'"
   />
-  <button matSuffix mat-icon-button type="button" (click)="showHidePassword()" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
+  <button matSuffix mat-icon-button type="button" (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
     <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
   </button>
   <mat-hint>
