--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -10,8 +10,7 @@
         placeholder="Current Password"
         label="Current Password"
         test-id="current-password"
-        (switchHidePassword)="switchHidePassword()"
-        [hidePassword]="hidePassword"
+        hidePassword="hidePassword"
       >
       </password-input>
       <!-- New Password field -->
@@ -21,8 +20,7 @@
         placeholder="New Password"
         label="New Password"
         test-id="password"
-        (switchHidePassword)="switchHidePassword()"
-        [hidePassword]="hidePassword"
+        hidePassword="hidePassword"
       >
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
@@ -45,8 +43,7 @@
         placeholder="New Password Confirmation"
         label="New Password Confirmation"
         test-id="password-confirm"
-        (switchHidePassword)="switchHidePassword()"
-        [hidePassword]="hidePassword"
+        hidePassword="hidePassword"
       >
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
