fix review part4

--- a/libs/ui/src/lib/form/password-input/password-input.component.html
+++ b/libs/ui/src/lib/form/password-input/password-input.component.html
@@ -7,6 +7,7 @@
     [errorStateMatcher]="errorStateMatcher"
     required
     [type]="hidePassword ? 'password' : 'text'"
+    [test-id]="testId"
   />
   <button matSuffix mat-icon-button type="button" (click)="hidePassword = !hidePassword" [matTooltip]="hidePassword ? 'Show Password' : 'Hide Password'">
     <mat-icon [svgIcon]="hidePassword ? 'visibility' : 'visibility_off'"></mat-icon>
