--- a/apps/festival/festival/src/app/event/login/login.component.html
+++ b/apps/festival/festival/src/app/event/login/login.component.html
@@ -22,7 +22,7 @@
       [control]="form.get('password')"
       placeholder="Password"
       label="Password"
-      test-id="password"
+      testId="password"
     >
       <mat-error *ngIf="form.get('password').hasError('required')">
         Password is <strong>required</strong> 
