--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-  <password-input [control]="form.get('password')" placeholder="New Password" label="New Password" test-id="password" >   
+  <password-input [control]="form.get('password')" placeholder="New Password" label="New Password" testId="password" >   
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
       New password is <strong>required</strong>.
@@ -17,7 +17,7 @@
     [errorStateMatcher]="passwordsMatcher" 
     placeholder="New Password Confirmation" 
     label="New Password Confirmation" 
-    test-id="password-confirm"
+    testId="password-confirm"
   >   
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
