--- a/libs/user/src/lib/auth/forms/password/change-password.component.html
+++ b/libs/user/src/lib/auth/forms/password/change-password.component.html
@@ -8,7 +8,7 @@
         [control]="form.get('current')"
         placeholder="Current Password"
         label="Current Password"
-        test-id="current-password"
+        testId="current-password"
       >
       </password-input>
       <password-input 
@@ -16,7 +16,7 @@
         [errorStateMatcher]="currentPasswordMatch"
         placeholder="New Password"
         label="New Password"
-        test-id="password"
+        testId="password"
       >
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
@@ -37,7 +37,7 @@
         [errorStateMatcher]="passwordsMatcher"
         placeholder="New Password Confirmation"
         label="New Password Confirmation"
-        test-id="password-confirm"
+        testId="password-confirm"
       >
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
