--- a/apps/festival/festival/src/app/dashboard/home/home.component.scss
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.scss
@@ -50,25 +50,15 @@ header {
   }
 }
 
-@include layout-bp(gt-xs) {
-  analytics-pie-chart,
-  analytics-line-chart,
-  analytics-map.carousel-map {
-    width: calc(50% - 16px);
-    margin-right: 16px;
-  }
+analytics-pie-chart,
+analytics-line-chart,
+analytics-map.carousel-map {
+  height: 100%;
 }
 
 @include layout-bp(xs) {
   header {
     flex-direction: column;
-  }
-
-  analytics-pie-chart,
-  analytics-line-chart,
-  analytics-map.carousel-map {
-    width: calc(100% - 8px);
-    margin-right: 8px;
   }
 }
 
