--- a/apps/financiers/financiers/src/app/marketplace/home/home.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/home/home.component.html
@@ -16,24 +16,25 @@
 <section fxLayout="column" fxLayoutGap="48px">
   <ng-container *ngFor="let section of sections; let i = index">
     <ng-container *ngIf="section.movies | async as movies">
-      <article fxLayout="column">
-        <div fxLayout="row" fxLayoutAlign="space-between start" flex>
+      <article fxLayout="column" class="cards">
+        <div fxLayout="row" fxLayoutAlign="space-between start">
           <h1>{{ section.title }}</h1>
           <a mat-button routerLink="../title" [queryParams]="section?.queryParams" color="primary">
             <span>See all</span>
             <mat-icon svgIcon="arrow_forward"></mat-icon>
           </a>
         </div>
-        <bf-carousel flex [min]="4">
+        <bf-carousel [columns]="4">
           <ng-container *ngFor="let movie of movies.hits">
-            <movie-card [movie]="movie" [size]="section.size" [link]="['/c/o/marketplace/title', movie.objectID]"
-              [col]="3" carouselItem>
-              <ng-container *ngIf="movie.objectID | getCampaign | async as campaign">
-                <span matTooltip="Minimum investment amount">
-                  {{ campaign.minPledge | currency : campaign.currency : 'symbol' : '1.0-0' }}
-                </span>
-              </ng-container>
-            </movie-card>
+            <ng-template carouselItem>
+              <movie-card [movie]="movie" [size]="section.size" [link]="['/c/o/marketplace/title', movie.objectID]">
+                <ng-container *ngIf="movie.objectID | getCampaign | async as campaign">
+                  <span matTooltip="Minimum investment amount">
+                    {{ campaign.minPledge | currency : campaign.currency : 'symbol' : '1.0-0' }}
+                  </span>
+                </ng-container>
+              </movie-card>
+            </ng-template>
           </ng-container>
         </bf-carousel>
       </article>
@@ -46,33 +47,39 @@
       Download our investment guide
     </a>
   </section>
-  <section>
-    <div fxLayout="row" fxLayoutAlign="space-between start" flex>
+  <section class="cards">
+    <div fxLayout="row" fxLayoutAlign="space-between start">
       <h1>Professional Financiers</h1>
       <a mat-button routerLink="/c/o/marketplace/organization" color="primary">
         <span>See all</span>
         <mat-icon svgIcon="arrow_forward"></mat-icon>
       </a>
     </div>
-    <bf-carousel flex [min]="4">
+    <bf-carousel [columns]="6">
       <ng-container *ngFor="let org of (orgs | async)?.hits">
-        <org-card-minimal [org]="org" carouselItem [col]="2"></org-card-minimal>
+        <ng-template carouselItem>
+          <org-card-minimal [org]="org"></org-card-minimal>
+        </ng-template>
       </ng-container>
     </bf-carousel>
   </section>
-  <section>
-    <div fxLayout="row" fxLayoutAlign="space-between start" flex>
+  <section class="cards">
+    <div fxLayout="row" fxLayoutAlign="space-between start">
       <h1>What's in it for you?</h1>
     </div>
-    <bf-carousel flex [min]="2">
-      <mat-card *ngFor="let benefit of benefits" carouselItem [col]="6">
-        <img [asset]="benefit.imgAsset" alt="benefit feature image" loading="eager">
-        <h3>{{ benefit.title }}</h3>
-        <p class="mat-body-1 benefits">{{ benefit.description }}</p>
-        <a *ngIf="benefit?.link?.href" [href]="benefit.link.href" target="_blank">
-          {{ benefit.link.text }}
-        </a>
-      </mat-card>
+    <bf-carousel [columns]="2">
+      <ng-container *ngFor="let benefit of benefits">
+        <ng-template carouselItem>
+          <mat-card>
+            <img [asset]="benefit.imgAsset" alt="benefit feature image" loading="eager">
+            <h3>{{ benefit.title }}</h3>
+            <p class="mat-body-1 benefits">{{ benefit.description }}</p>
+            <a *ngIf="benefit?.link?.href" [href]="benefit.link.href" target="_blank">
+              {{ benefit.link.text }}
+            </a>
+          </mat-card>
+        </ng-template>
+      </ng-container>
     </bf-carousel>
   </section>
 
