--- a/libs/media/src/lib/file/carousel/carousel.component.html
+++ b/libs/media/src/lib/file/carousel/carousel.component.html
@@ -8,16 +8,20 @@
 <ng-container *ngIf="files.length; else noFiles">
   <bf-carousel>
 
-    <button carouselItem mat-button (click)="selectFile('')" matTooltip="Stop presenting file">
-      <mat-icon svgIcon="cancel"></mat-icon>
-      <p>Stop</p>
-    </button>
+    <ng-template carouselItem>
+      <button mat-button (click)="selectFile('')" matTooltip="Stop presenting file">
+        <mat-icon svgIcon="cancel"></mat-icon>
+        <p>Stop</p>
+      </button>
+    </ng-template>
 
     <ng-container *ngFor="let file of files">
-      <button *ngIf="!!file.storagePath" carouselItem class="file" (click)="selectFile(file.storagePath)" [disabled]="isSelected(file.storagePath)" matTooltip="Share on screen">
-        <mat-icon [svgIcon]="file.storagePath | fileTypeImage: 'icon'"></mat-icon>
-        <p>{{ file.storagePath | fileName }}</p>
-      </button>
+      <ng-template carouselItem>
+        <button *ngIf="!!file.storagePath" class="file" (click)="selectFile(file.storagePath)" [disabled]="isSelected(file.storagePath)" matTooltip="Share on screen">
+          <mat-icon [svgIcon]="file.storagePath | fileTypeImage: 'icon'"></mat-icon>
+          <p>{{ file.storagePath | fileName }}</p>
+        </button>
+      </ng-template>
     </ng-container>
   </bf-carousel>
 </ng-container>
