--- a/libs/media/src/lib/file/carousel/carousel.component.scss
+++ b/libs/media/src/lib/file/carousel/carousel.component.scss
@@ -42,6 +42,7 @@
       cursor: pointer;
       padding: 8px;
       width: 140px;
+      height: 100%;
       margin-left: 16px;
       border: none;
       background-color: var(--background);
