--- a/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
@@ -21,6 +21,7 @@ footer {
     margin-bottom: 24px;
     img {
       height: 100%; // Only necessary for Safari
+      width: 100%;
       cursor: pointer;
     }
   }
