8245 bf carousel not use matlayoutmodule

--- a/libs/ui/src/lib/carousel/carousel.component.html
+++ b/libs/ui/src/lib/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<ul cdkScrollable #container>
+<ul cdkScrollable>
   <li *ngFor="let item of items">
     <ng-template [ngTemplateOutlet]="item.template"></ng-template>
   </li>
